Fix sprite deletion prompt dark mode support

--- a/addons/editor-dark-mode/experimental_editor.css
+++ b/addons/editor-dark-mode/experimental_editor.css
@@ -567,6 +567,9 @@ img[class*="tool-select-base_tool-select-icon_"],
   fill: var(--editorDarkMode-primary-transparent35);
   stroke: var(--editorDarkMode-primary);
 }
+[class*="delete-confirmation-prompt_body_"] [class*="confirmation-prompt_button-row_"] span {
+  color: var(--editorDarkMode-primary);
+}
 [class*="delete-confirmation-prompt_label_"],
 [class*="stage-selector_stage-selector_"][class*="stage-selector_is-selected_"] [class*="stage-selector_header-title_"],
 [class*="prompt_button-row_"] button[class*="prompt_ok-button_"],
@@ -586,7 +589,8 @@ img[class*="tool-select-base_tool-select-icon_"],
 .sa-onion-button[data-enabled="true"] .sa-onion-image {
   filter: var(--editorDarkMode-primary-filter2);
 }
-[class*="delete-confirmation-prompt_arrow-container_"] [class*="delete-confirmation-prompt_delete-icon_"] {
+[class*="modal-with-arrow_arrow_"][style*="width: 14px"], /* sprite confirmation prompt arrow */
+[class*="delete-confirmation-prompt_body_"] img {
   filter: var(--editorDarkMode-primary-iconFilter);
 }
 [class*="action-menu_more-buttons-outer_"],
